# AWSResourceManager

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.example  pyproject.toml  requirements.txt  ruff.toml  test_s3.py
.github/workflows/: CD.yaml  CI.yaml  CICD.yaml  deploy-pypi.yaml  deploy-test-pypi.yaml  test-lint.yaml
src/: __init__.py
src/aws_resource_manager/: __init__.py  credentials.py  ec2.py  get_logger.py  logs.py  redshift.py  s3.py
src/aws_resource_manager/ec2/: _init__.py  ec2.py  logger.py
src/aws_resource_manager/redshift/: _init__.py
src/aws_resource_manager/s3/: __init__.py  logger.py  s3.py
tests/: __init__.py  conftest.py  test_credentials.py  test_s3.py  test_sample.py
