[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-resource-manager"
version = "0.1.0"
description = "A Python package for managing AWS services like S3, RDS, and EC2."
authors = [
    {name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com"},
]
maintainers = [
  {name = "Abraham Ajibade", email = "abraham0ajibade@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[project.dependencies]
boto3 = "1.36.2"
botocore = "1.36.2"
pydantic = "2.10.5"
fastapi = "0.115.6"

[project.optional-dependencies.dev]
pytest = "8.3.4"
